--- a/Sample1/sample2.html
+++ b/Sample1/sample2.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Sample 2</h1>
-    <p id="demo">Original Text</p>
+    <p id="demo">Updating Original Text</p>
     <script>
         var paragraph = document.getElementById("demo");
-        paragraph.textContent = "Modified Text";
+        paragraph.textContent = "Updating Modified Text";
         paragraph.addEventListener("click", function() {
             alert("Paragraph clicked!");
         });
